# djangor-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  uwsgi.ini
.github/workflows/: deploy.yml  django.yml  lint.yml
backend/: db.sqlite3
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_invitation_guest_2_name.py
backend/src/: settings.py  urls.py
